overflow styling fixes

--- a/plugins/Files/css/files.css
+++ b/plugins/Files/css/files.css
@@ -28,6 +28,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: flex-start;
+	overflow-x: hidden;
 	height: 100%;
 	width: 100%;
 }
@@ -35,7 +36,7 @@
 	width: 400px;
 	height: 100%;
 	box-shadow:inset 0px 0px 0px 1px #00CBA0;
-	overflow-y: scroll;
+	overflow-y: auto;
 	overflow-x: hidden;
 	display: flex;
 	flex-direction: column;
@@ -118,8 +119,12 @@
 	color: #fff;
 	padding-bottom: 10px;
 	padding-top: 10px;
-	padding-left: 20px;
+	padding-left: 5px;
+	padding-right: 5px;
 	overflow: hidden;
+}
+.files-toolbar .buttons div:hover {
+	opacity: 0.5;
 }
 .files-toolbar .buttons div {
 	display: inline-block;
@@ -134,6 +139,7 @@
 	margin-bottom: 2px;
 	font-size: 12px;
 	color: #f5f5f5;
+	user-select: none;
 }
 .files-toolbar .buttons div i {
 	color: #00CBA0;
